--- a/SMS.Web/Views/Guard/ConfirmLE.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmLE.cshtml
@@ -15,7 +15,7 @@
             <div class="form-group row-1 input-group">
                 <label class="control-label col-md-2 top-space lb">Mã CNV <span class="red">(*)</span></label>
                 <div class="col-md-7 input-group">
-                    <div class="top-space">
+                    <div class="top-space input-group-sm">
                         <input type="hidden" id="leaveId" value="@Model.Leave_Early.ID" />
                         @Html.TextBoxFor(model => model.Leave_Early.EmpCode, new { @id = "txtEmpCodeBI", @class = "form-control input-previous-button col-md-12", @readonly = "readonly" })
                     </div>
@@ -23,18 +23,21 @@
             </div>
 
             <div class="form-group input-group">
-                <label class="control-label col-md-2 top-space lb">Ca</label>
-                <div class="col-md-7 input-group">
-                    <div class="top-space">
-                        <input type="hidden" id="leaveId" value="@Model.Leave_Early.ID" />
-                        @Html.TextBoxFor(model => model.Leave_Early.Shift, new { @class = "form-control input-previous-button col-md-12", @readonly = "readonly" })
-                    </div>
+                @Html.LabelFor(model => model.Leave_Early.Shift, "Ca", htmlAttributes: new { @class = "control-label col-md-2 top-space" })
+                <div class="col-md-3 input-group-sm">
+                    @Html.DropDownListFor(model => model.Leave_Early.Shift, new List<SelectListItem>()
+                    {
+                       new SelectListItem(){Selected = true, Text = "Hành chính", Value="0"},
+                       new SelectListItem(){Text = "1", Value="1"},
+                       new SelectListItem(){Text = "2", Value="2"},
+                       new SelectListItem(){Text = "3", Value="3"}
+                    }, new { @class = "form-control input-previous-button", disabled = "disabled" })
                 </div>
             </div>
 
             <div class="form-group input-group">
                 <label class="control-label col-md-2">Lý do <span class="red">(*)</span></label>
-                <div class="col-md-10">
+                <div class="col-md-10 input-group-sm">
                     @Html.TextAreaFor(model => model.Leave_Early.Reason, new { @class = "form-control col-md-12", @readonly = "readonly", @style = "resize: none" })
                 </div>
             </div>
@@ -53,15 +56,15 @@
                 </div>
             </div>
             <!--Thông tin profile-->
-            <div class="form-group input-group profile">
+            <div class="form-group input-group profile input-group-sm">
                 <label class="control-label col-md-3">Họ và tên</label>
                 @Html.TextBoxFor(model => model.Leave_Early.FullName, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
-            <div class="form-group input-group profile">
+            <div class="form-group input-group profile input-group-sm">
                 <label class="control-label col-md-3">Vị trí</label>
                 @Html.TextBoxFor(model => model.Leave_Early.Position, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
-            <div class="form-group input-group profile">
+            <div class="form-group input-group profile input-group-sm">
                 <label class="control-label col-md-3">Phòng ban</label>
                 @Html.TextBoxFor(model => model.Leave_Early.Team, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
@@ -97,7 +100,7 @@
         </table>
     </div>
     <div style="text-align: center">
-        <label id="return-approve" class="btn-cancel btn top-space" title="Trở lại" style="cursor: pointer">
+        <label id="return-approve" class="btn-cancel btn top-space btn-sm" title="Trở lại" style="cursor: pointer">
             <i class="fas fa-arrow-left"></i>&nbsp; Trở lại
         </label>
     </div>
@@ -146,6 +149,13 @@
                 }
             })
         })
+
+        $("#guard").removeClass('collapse');
+        $("#guard").removeClass('collapsed');
+        $("#guard").attr("aria-expanded", "true");
+        $("#queue").addClass('active');
+        $("#collapseGuard").addClass('show');
+        $("#collapseInOut").removeClass('collapse');
     </script>
 }
 
