--- a/SMS.Web/Views/Guard/Queue.cshtml
+++ b/SMS.Web/Views/Guard/Queue.cshtml
@@ -1,15 +1,8 @@
 ﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Queue";
 }
 
-<link href="~/Assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-<link href="~/Assets/css/fonts-gg.css" rel="stylesheet" />
-<link href="~/Assets/css/jquery-ui.css" rel="stylesheet" />
-<link href="~/Assets/css/sb-admin-2.min.css" rel="stylesheet">
-<link href="~/Assets/css/customize.css" rel="stylesheet" />
-<link href="~/Assets/css/jquery.dataTables.min.css" rel="stylesheet" />
-<link href="~/Assets/css/jquery-confirm.css" rel="stylesheet" />
-<link href="~/Assets/css/jquery.timepicker.min.css" rel="stylesheet" />
 <style>
     label {
         color: black;
@@ -56,10 +49,10 @@
                 </div>
                 <div class="col-2">
                     <a href="/Guest/Create" class="btn btn-sm btn-primary" id="btn-guest-register"><i class="fas fa-users"></i> Đăng ký khách</a>
+                    @*&nbsp;
+                    <a href="/Guard/History" class="btn btn-sm btn-info" id="btn-process" title="Chuyển sang màn hình Lịch sử"><i class="fas fa-list-alt"></i> Lịch sử</a>*@
                     &nbsp;
-                    <a href="/Guard/History" class="btn btn-sm btn-info" id="btn-process" title="Chuyển sang màn hình Lịch sử"><i class="fas fa-list-alt"></i> Lịch sử</a>
-                    &nbsp;
-                    <button class="btn btn-sm btn-success" id="btn-refresh" title="Tải lại danh sách"><i class="fas fa-sync"></i></button>
+                    <button class="btn btn-sm btn-search btn-info" title="Tìm kiếm"><i class="fas fa-search"></i> Tìm kiếm</button>
                 </div>
                 <button type="submit" class="btn btn-primary" style="display: none"></button>
             </div>
@@ -380,9 +373,9 @@
                             <td>@item.Team</td>
                             <td>@item.Position</td>
                             <td>
-                                <button class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/Guest/GuestReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
-                                </button>
+                                </a>
                             </td>
                         </tr>
                     }
@@ -468,7 +461,7 @@
                             <td>@item.Team</td>
                             <td>@item.Position</td>
                             <td>
-                                <a href="/Guest/GuestReport/@item.ID" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/Guest/GuestReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
                                 </a>
                             </td>
@@ -493,9 +486,6 @@
                     <tr class="table-heading">
                         <th>
                             @Html.DisplayName("Thời điểm")
-                        </th>
-                        <th>
-                            @Html.DisplayName("Đăng ký")
                         </th>
                         <th>
                             @Html.DisplayName("Loại khách")
@@ -562,9 +552,9 @@
                             <td>@item.Team</td>
                             <td>@item.Position</td>
                             <td>
-                                <button class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/Guest/GuestReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
-                                </button>
+                                </a>
                             </td>
                         </tr>
                     }
@@ -585,9 +575,6 @@
                     <tr class="table-heading">
                         <th>
                             @Html.DisplayName("Thời điểm")
-                        </th>
-                        <th>
-                            @Html.DisplayName("Đăng ký")
                         </th>
                         <th>
                             @Html.DisplayName("Loại khách")
@@ -654,9 +641,9 @@
                             <td>@item.Team</td>
                             <td>@item.Position</td>
                             <td>
-                                <button class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/Guest/GuestReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
-                                </button>
+                                </a>
                             </td>
                         </tr>
                     }
@@ -676,6 +663,13 @@
         });
 
         $('#date_from, #date_to').datepicker().datepicker("setDate", new Date());
+
+        $("#guard").removeClass('collapse');
+        $("#guard").removeClass('collapsed');
+        $("#guard").attr("aria-expanded", "true");
+        $("#queue").addClass('active');
+        $("#collapseGuard").addClass('show');
+        $("#collapseInOut").removeClass('collapse');
     </script>
 }
 
