--- a/SMS.Web/Views/Guard/ConfirmBringIn.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmBringIn.cshtml
@@ -10,11 +10,11 @@
     </div>
     <!--Cột bên trái dành cho form đăng ký-->
     <div class="col-md-12 row-form">
-        <div class="column form-horizontal form-left col-md-6">
+        <div class="column form-horizontal form-left col-md-7">
             <div class="form-group row-1 input-group">
                 <label class="control-label col-md-2 top-space lb">Mã CNV <span class="red">(*)</span></label>
                 <div class="col-md-7 input-group">
-                    <div class="top-space">
+                    <div class="top-space input-group-sm">
                         @Html.TextBoxFor(model => model.Bring_In.EmpCode, new { @id = "txtEmpCodeBI", @class = "form-control input-previous-button col-md-12", @readonly = "readonly" })
                     </div>
                 </div>
@@ -22,15 +22,28 @@
 
             <div class="form-group input-group">
                 <label class="control-label col-md-2">Lý do <span class="red">(*)</span></label>
-                <div class="col-md-10">
+                <div class="col-md-10 input-group-sm">
                     @Html.TextAreaFor(model => model.Bring_In.Reason, new { @class = "form-control col-md-12", @readonly = "readonly", @style = "resize: none" })
+                </div>
+            </div>
+
+            <div class="form-group input-group">
+                <label class="control-label col-md-2 top-space">Ngày đăng ký <span class="red">(*)</span></label>
+                <div class="col-md-3 input-group-sm">
+                    <div class="input-group-sm">
+                        @Html.TextBoxFor(model => model.Bring_In.EstimatedDate, new { @id = "txtEmpCodeBI", @class = "form-control input-previous-button col-md-12", @readonly = "readonly" })
+                    </div>
+                </div>
+                <label class="control-label top-space">Giờ đăng ký <span class="red">(*)</span></label>
+                <div class="col-md-2 input-group-sm">
+                    <div class="input-group-sm">
+                        @Html.TextBoxFor(model => model.Bring_In.EstimatedTime, new { @id = "txtEmpCodeBI", @class = "form-control input-previous-button col-md-12", @readonly = "readonly" })
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="column col-md-2 col-mid">
-            <i class=" fas fa-play"></i>
-        </div>
+        <div class="column col-md-1 col-mid"></div>
 
 
         <!--Cột bên phải dành cho thông tin nhân viên-->
@@ -42,16 +55,16 @@
                 </div>
             </div>
             <!--Thông tin profile-->
-            <div class="form-group input-group profile">
-                <label class="control-label col-md-3">Họ và tên <span class="red">(*)</span></label>
+            <div class="form-group input-group profile input-group-sm">
+                <label class="control-label col-md-3">Họ và tên</label>
                 @Html.TextBoxFor(model => model.Bring_In.FullName, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
-            <div class="form-group input-group profile">
-                <label class="control-label col-md-3">Vị trí <span class="red">(*)</span></label>
+            <div class="form-group input-group profile input-group-sm">
+                <label class="control-label col-md-3">Vị trí</label>
                 @Html.TextBoxFor(model => model.Bring_In.Position, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
-            <div class="form-group input-group profile">
-                <label class="control-label col-md-3">Phòng ban <span class="red">(*)</span></label>
+            <div class="form-group input-group profile input-group-sm">
+                <label class="control-label col-md-3">Phòng ban</label>
                 @Html.TextBoxFor(model => model.Bring_In.Team, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
         </div>
@@ -106,26 +119,62 @@
                             {
                                 <i class="fas fa-check-square" style="color: dodgerblue"></i>
                             }
-                            else
+                            else if (@item.IsReturn == false)
                             {
                                 <i class="fas fa-times" style="color: red"></i>
                             }
                         </td>
                         <td>@item.ReturnTime</td>
                         <td>@item.ApprovedBy</td>
-                        <td>@item.ApprovedStatus</td>
+                        <td>
+                            @if (item.ApprovedStatus == 1)
+                            {
+                                <i class="fas fa-check-square"></i>
+                            }
+                            else if (item.ApprovedStatus == 0)
+                            {
+                                <i class="fas fa-times" style="color: red"></i>
+                            }
+                        </td>
                         <td>@item.ApproverRemark</td>
                         <td>@item.ApprovedDate</td>
                         <td>@item.ITT</td>
-                        <td>@item.ITT_Status</td>
+                        <td>
+                            @if (item.ITT_Status == 1)
+                            {
+                                <i class="fas fa-check-square"></i>
+                            }
+                            else if (item.ITT_Status == 0)
+                            {
+                                <i class="fas fa-times" style="color: red"></i>
+                            }
+                        </td>
                         <td>@item.ITT_Remark</td>
                         <td>@item.ITT_Date</td>
                         <td>@item.SMT</td>
-                        <td>@item.SMT_Status</td>
+                        <td>
+                            @if (item.SMT_Status == 1)
+                            {
+                                <i class="fas fa-check-square"></i>
+                            }
+                            else if(item.SMT_Status == 0)
+                            {
+                                <i class="fas fa-times" style="color: red"></i>
+                            }
+                        </td>
                         <td>@item.SMT_Remark</td>
                         <td>@item.SMT_Date</td>
                         <td>@item.FST</td>
-                        <td>@item.FST_Status</td>
+                        <td>
+                            @if (item.FST_Status == 1)
+                            {
+                                <i class="fas fa-check-square"></i>
+                            }
+                            else if (item.FST_Status == 0)
+                            {
+                                <i class="fas fa-times" style="color: red"></i>
+                            }
+                        </td>
                         <td>@item.FST_Remark</td>
                         <td>@item.FST_Date</td>
                         <td>@item.GuardIn</td>
@@ -137,11 +186,11 @@
                             }
                             else if (@item.GuardStatusIn == 1)
                             {
-                                <i class="fas fa-check"></i>
+                                <i class="fas fa-check-square"></i>
                             }
-                            else
+                            else 
                             {
-                                <i class="fas fa-times"></i>
+                                <i class="fas fa-times" style="color: red"></i>
                             }
                         </td>
                         <td><input class="remark-@item.ID-in remark col-12" type="text" placeholder="Ghi chú..." value="@item.GuardRemarkOut" /></td>
@@ -155,11 +204,11 @@
                             }
                             else if (@item.GuardStatusOut == 1)
                             {
-                                <i class="fas fa-check"></i>
+                                <i class="fas fa-check-square"></i>
                             }
                             else
                             {
-                                <i class="fas fa-times"></i>
+                                <i class="fas fa-times" style="color: red"></i>
                             }
 
                         </td>
@@ -171,11 +220,12 @@
         </table>
     </div>
     <div style="text-align: center">
-        <label id="return-queue" class="btn-cancel btn top-space" title="Trở lại" style="cursor: pointer">
+        <label id="return-queue" class="btn-cancel btn top-space btn-sm" title="Trở lại" style="cursor: pointer">
             <i class="fas fa-arrow-left"></i>&nbsp; Trở lại
         </label>
     </div>
 </div>
+
 @section scripts{
     <script src="~/Assets/js/jquery-confirm.js"></script>
     <script src="~/Assets/js/utils.js"></script>
@@ -221,5 +271,12 @@
                 ret: true
             })
         }
+
+        $("#guard").removeClass('collapse');
+        $("#guard").removeClass('collapsed');
+        $("#guard").attr("aria-expanded", "true");
+        $("#queue").addClass('active');
+        $("#collapseGuard").addClass('show');
+        $("#collapseInOut").removeClass('collapse');
     </script>
 }
