--- a/SMS.Web/Views/Guard/ConfirmBringOut.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmBringOut.cshtml
@@ -11,11 +11,11 @@
     </div>
     <!--Cột bên trái dành cho form đăng ký-->
     <div class="col-md-12 row-form">
-        <div class="column form-horizontal form-left col-md-6">
+        <div class="column form-horizontal form-left col-md-7">
             <div class="form-group row-1 input-group">
                 <label class="control-label col-md-2 top-space lb">Mã CNV <span class="red">(*)</span></label>
                 <div class="col-md-7 input-group">
-                    <div class="top-space">
+                    <div class="top-space input-group-sm">
                         @Html.TextBoxFor(model => model.Bring_Out.EmpCode, new { @id = "txtEmpCodeBI", @class = "form-control input-previous-button col-md-12", @readonly = "readonly" })
                     </div>
                 </div>
@@ -23,15 +23,28 @@
 
             <div class="form-group input-group">
                 <label class="control-label col-md-2">Lý do <span class="red">(*)</span></label>
-                <div class="col-md-10">
+                <div class="col-md-10 input-group-sm">
                     @Html.TextAreaFor(model => model.Bring_Out.Reason, new { @class = "form-control col-md-12", @readonly = "readonly", @style = "resize: none" })
+                </div>
+            </div>
+
+            <div class="form-group input-group">
+                <label class="control-label col-md-2 top-space">Ngày đăng ký <span class="red">(*)</span></label>
+                <div class="col-md-3 input-group-sm">
+                    <div class="input-group-sm">
+                        @Html.TextBoxFor(model => model.Bring_Out.EstimatedDate, new { @id = "txtEmpCodeBI", @class = "form-control input-previous-button col-md-12", @readonly = "readonly" })
+                    </div>
+                </div>
+                <label class="control-label top-space">Giờ đăng ký <span class="red">(*)</span></label>
+                <div class="col-md-2 input-group-sm">
+                    <div class="input-group-sm">
+                        @Html.TextBoxFor(model => model.Bring_Out.EstimatedTime, new { @id = "txtEmpCodeBI", @class = "form-control input-previous-button col-md-12", @readonly = "readonly" })
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="column col-md-2 col-mid">
-            <i class=" fas fa-play"></i>
-        </div>
+        <div class="column col-md-1 col-mid"></div>
 
 
         <!--Cột bên phải dành cho thông tin nhân viên-->
@@ -43,16 +56,16 @@
                 </div>
             </div>
             <!--Thông tin profile-->
-            <div class="form-group input-group profile">
-                <label class="control-label col-md-3">Họ và tên <span class="red">(*)</span></label>
+            <div class="form-group input-group profile input-group-sm">
+                <label class="control-label col-md-3">Họ và tên</label>
                 @Html.TextBoxFor(model => model.Bring_Out.FullName, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
-            <div class="form-group input-group profile">
-                <label class="control-label col-md-3">Vị trí <span class="red">(*)</span></label>
+            <div class="form-group input-group profile input-group-sm">
+                <label class="control-label col-md-3">Vị trí</label>
                 @Html.TextBoxFor(model => model.Bring_Out.Position, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
-            <div class="form-group input-group profile">
-                <label class="control-label col-md-3">Phòng ban <span class="red">(*)</span></label>
+            <div class="form-group input-group profile input-group-sm">
+                <label class="control-label col-md-3">Phòng ban</label>
                 @Html.TextBoxFor(model => model.Bring_Out.Team, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
         </div>
@@ -77,13 +90,12 @@
                     <th colspan="4">SMT phê duyệt</th>
                     <th colspan="4">FST phê duyệt</th>
                     <th colspan="4">Bảo vệ xác nhận mang ra</th>
-                    <th colspan="4">Bảo vệ xác nhận mang vào</th>
+                    <th colspan="4">Bảo vệ xác nhận mang trở lại</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    @foreach (var item in Model.Bring_Out_Items)
-                    {
+                @foreach (var item in Model.Bring_Out_Items)
+                {
                     <tr>
                         <td>@item.Item</td>
                         <td>@item.Serial</td>
@@ -108,26 +120,62 @@
                             {
                                 <i class="fas fa-check-square" style="color: dodgerblue"></i>
                             }
-                            else
+                            else if (@item.IsReturn == false)
                             {
                                 <i class="fas fa-times" style="color: red"></i>
                             }
                         </td>
                         <td>@item.ReturnTime</td>
                         <td>@item.ApprovedBy</td>
-                        <td>@item.ApprovedStatus</td>
+                        <td>
+                            @if (item.ApprovedStatus == 1)
+                            {
+                                <i class="fas fa-check-square"></i>
+                            }
+                            else if (item.ApprovedStatus == 0)
+                            {
+                                <i class="fas fa-times" style="color: red"></i>
+                            }
+                        </td>
                         <td>@item.ApproverRemark</td>
                         <td>@item.ApprovedDate</td>
                         <td>@item.ITT</td>
-                        <td>@item.ITT_Status</td>
+                        <td>
+                            @if (item.ITT_Status == 1)
+                            {
+                                <i class="fas fa-check-square"></i>
+                            }
+                            else if (item.ITT_Status == 0)
+                            {
+                                <i class="fas fa-times" style="color: red"></i>
+                            }
+                        </td>
                         <td>@item.ITT_Remark</td>
                         <td>@item.ITT_Date</td>
                         <td>@item.SMT</td>
-                        <td>@item.SMT_Status</td>
+                        <td>
+                            @if (item.SMT_Status == 1)
+                            {
+                                <i class="fas fa-check-square"></i>
+                            }
+                            else if (item.SMT_Status == 0)
+                            {
+                            <i class="fas fa-times" style="color: red"></i>
+                            }
+                        </td>
                         <td>@item.SMT_Remark</td>
                         <td>@item.SMT_Date</td>
                         <td>@item.FST</td>
-                        <td>@item.FST_Status</td>
+                        <td>
+                            @if (item.FST_Status == 1)
+                            {
+                                <i class="fas fa-check-square"></i>
+                            }
+                            else if (item.FST_Status == 0)
+                            {
+                                <i class="fas fa-times" style="color: red"></i>
+                            }
+                        </td>
                         <td>@item.FST_Remark</td>
                         <td>@item.FST_Date</td>
                         <td>@item.GuardOut</td>
@@ -139,11 +187,11 @@
                             }
                             else if (@item.GuardStatusOut == 1)
                             {
-                                <i class="fas fa-check"></i>
+                                <i class="fas fa-check-square"></i>
                             }
                             else
                             {
-                                <i class="fas fa-times"></i>
+                                <i class="fas fa-times" style="color:red"></i>
                             }
                         </td>
                         <td><input class="remark-@item.ID-out remark col-12" type="text" placeholder="Ghi chú..." value="@item.GuardRemarkOut" /></td>
@@ -157,72 +205,78 @@
                             }
                             else if (@item.GuardStatusReturn == 1)
                             {
-                                <i class="fas fa-check"></i>
+                                <i class="fas fa-check-square"></i>
                             }
                             else
                             {
-                                <i class="fas fa-times"></i>
+                                <i class="fas fa-times" style="color:red"></i>
                             }
                         </td>
                         <td><input class="remark-@item.ID-return remark col-12" type="text" placeholder="Ghi chú..." value="@item.GuardRemarkReturn" /></td>
                         <td>@item.GuardDateReturn</td>
                     </tr>
                 }
-                </tbody>
-            </table>
-        </div>
-        <div style="text-align: center">
-            <label id="return-queue" class="btn-cancel btn top-space" title="Trở lại" style="cursor: pointer">
-                <i class="fas fa-arrow-left"></i>&nbsp; Trở lại
-            </label>
-        </div>
+            </tbody>
+        </table>
     </div>
+    <div style="text-align: center">
+        <label id="return-queue" class="btn-cancel btn top-space btn-sm" title="Trở lại" style="cursor: pointer">
+            <i class="fas fa-arrow-left"></i>&nbsp; Trở lại
+        </label>
+    </div>
+</div>
 
-    @section scripts{
-        <script src="~/Assets/js/jquery-confirm.js"></script>
-        <script src="~/Assets/js/utils.js"></script>
-        <script>
-            $('#return-queue').on("click", () => {
-                window.location.href = "/Guard/Queue"
-            })
+@section scripts{
+    <script src="~/Assets/js/jquery-confirm.js"></script>
+    <script src="~/Assets/js/utils.js"></script>
+    <script>
+        $('#return-queue').on("click", () => {
+            window.location.href = "/Guard/Queue"
+        })
 
-            function handleApproveOut(id) {
-                var remarkId = "." + "remark" + "-" + id + "-" + "out"
-                handleAPI("/Guard/ApproveBringOutItem", {
-                    id,
-                    remark: $(remarkId).val(),
-                    status: 1
-                }, true)
-            }
+        function handleApproveOut(id) {
+            var remarkId = "." + "remark" + "-" + id + "-" + "out"
+            handleAPI("/Guard/ApproveBringOutItem", {
+                id,
+                remark: $(remarkId).val(),
+                status: 1
+            }, true)
+        }
 
-            function handleUnapproveOut(id) {
-                var remarkId = "." + "remark" + "-" + id + "-" + "out"
-                handleAPI("/Guard/ApproveBringOutItem", {
-                    id,
-                    remark: $(remarkId).val(),
-                    status: 0
-                }, true)
-            }
+        function handleUnapproveOut(id) {
+            var remarkId = "." + "remark" + "-" + id + "-" + "out"
+            handleAPI("/Guard/ApproveBringOutItem", {
+                id,
+                remark: $(remarkId).val(),
+                status: 0
+            }, true)
+        }
 
-            function handleApproveReturn(id) {
-                var remarkId = "." + "remark" + "-" + id + "-" + "return"
-                handleAPI("/Guard/ApproveBringOutItem", {
-                    id,
-                    remark: $(remarkId).val(),
-                    status: 1,
-                    ret: true
-                }, true)
-            }
+        function handleApproveReturn(id) {
+            var remarkId = "." + "remark" + "-" + id + "-" + "return"
+            handleAPI("/Guard/ApproveBringOutItem", {
+                id,
+                remark: $(remarkId).val(),
+                status: 1,
+                ret: true
+            }, true)
+        }
 
-            function handleUnapproveReturn(id) {
-                var remarkId = "." + "remark" + "-" + id + "-" + "return"
-                handleAPI("/Guard/ApproveBringOutItem", {
-                    id,
-                    remark: $(remarkId).val(),
-                    status: 0,
-                    ret: true
-                }, true)
-            }
-        </script>
-    }
+        function handleUnapproveReturn(id) {
+            var remarkId = "." + "remark" + "-" + id + "-" + "return"
+            handleAPI("/Guard/ApproveBringOutItem", {
+                id,
+                remark: $(remarkId).val(),
+                status: 0,
+                ret: true
+            }, true)
+        }
 
+        $("#guard").removeClass('collapse');
+        $("#guard").removeClass('collapsed');
+        $("#guard").attr("aria-expanded", "true");
+        $("#queue").addClass('active');
+        $("#collapseGuard").addClass('show');
+        $("#collapseInOut").removeClass('collapse');
+    </script>
+}
