--- a/SMS.Web/Views/LeaveEarly/SummaryLE.cshtml
+++ b/SMS.Web/Views/LeaveEarly/SummaryLE.cshtml
@@ -34,15 +34,45 @@
     }
 </style>
 
+<div class="row dataTables_wrapper dt-bootstrap4 above-table">
+    <div class="col-2 input-group input-group-sm">
+        <label class="no-margin-bottom" style="padding-top: 5px">Từ ngày</label>
+        &nbsp;
+        <input id="date_from" readonly>
+    </div>
+    <div class="col-2 input-group input-group-sm">
+        <label class="no-margin-bottom" style="padding-top: 5px">Đến ngày</label>
+        &nbsp;
+        <input id="date_to" readonly>
+    </div>
+    <div class="col-2 input-group input-group-sm">
+        <label class="no-margin-bottom" style="padding-top: 5px">Phòng ban</label>
+        &nbsp;
+        <input id="team">
+    </div>
+    <div class="col-2 input-group input-group-sm">
+        <label class="no-margin-bottom" style="padding-top: 5px">Mã nhân viên</label>
+        &nbsp;
+        <input id="emp_code">
+    </div>
+    <div class="col-2 input-group input-group-sm">
+        <label class="no-margin-bottom" style="padding-top: 5px">Ca làm việc</label>
+        &nbsp;
+        <select>
+            <option value="0">Hành chính</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+    </div>
+</div>
+<br />
+
 @using (Html.BeginForm("SummaryLE", "LeaveEarly", FormMethod.Get))
 {
     <div style="width: 100%">
         <br />
-        <br />
-        <br />
-        <br />
         <div style="text-align: center; color: black">
-            <img style="width: 200px; position: absolute; left:9%; top:2%" src="~/Assets/img/logo.png" />
             <h5 style="font-size:30px; color: black" class="m-0 font-weight-bold">CÔNG NHÂN VIÊN VỀ SỚM</h5>
         </div>
         <div class="center">
@@ -50,13 +80,11 @@
         </div>
         <br />
         <br />
-        <br />
-        <br />
         <div>
             <table class="table table-bordered" style="border: 1px solid black !important">
                 <tr>
                     <th>Mã</th>
-                    <th>Nhân viên</th>
+                    <th colspan="2">Nhân viên</th>
                     <th>Phòng ban</th>
                     <th>Mục đích</th>
                     <th>Giờ ra</th>
@@ -76,20 +104,17 @@
                         <td class="col-sticky-2">
                             @Html.DisplayFor(modelItem => item.FullName)
                         </td>
-                        <td class="col-sticky-3">
-                            @Html.DisplayFor(modelItem => item.Position)
-                        </td>
                         <td class="col-sticky-4">
                             @Html.DisplayFor(modelItem => item.Team)
                         </td>
-                        <td class="col-sticky-6">
+                        <td class="col-sticky-6" style="text-align:center; vertical-align: central">
                             @if (item.Purpose)
                             {
-                                <p style="display:inherit">Công việc</p>
+                                <p>Công việc</p>
                             }
                             else
                             {
-                                <p style="display:inherit">Cá nhân</p>
+                                <p>Cá nhân</p>
                             }
                         </td>
                         <td class="col-sticky-8">
@@ -113,9 +138,9 @@
                             }
                         </td>
                         <td>
-                            @if (item.Guard != null)
+                            @if (item.GuardDate != null)
                             {
-                                @Html.DisplayFor(modelItem => item.Guard)
+                                @Html.DisplayFor(modelItem => item.GuardDate)
                             }
                         </td>
                         <td>
@@ -123,11 +148,9 @@
                             {
                                 <i class="fas fa-check-square" style="color:dodgerblue" title="Đã xác nhận"></i>
                             }
-                        </td>
-                        <td>
-                            @if (item.GuardDate != null)
+                            else if (item.GuardStatus == 0)
                             {
-                                @Html.DisplayFor(modelItem => item.GuardDate)
+                                <i class="fas fa-window-close" style="color:red" title="Không xác nhận"></i>
                             }
                         </td>
                     </tr>
@@ -136,3 +159,20 @@
         </div>
     </div>
 }
+
+<script>
+    $('#estimated_date_out, #estimated_date_return, #date_from, #date_to').datepicker({
+        dateFormat: 'dd/mm/yy'
+    });
+
+    $('#estimated_date_out, #estimated_date_return, #date_from, #date_to').datepicker().datepicker("setDate", new Date());
+
+    $('.timepicker, #estimated_time_out, #estimated_time_return').timepicker({
+        timeFormat: 'h:mm p',
+        interval: 5,
+        startTime: '00:00',
+        dynamic: false,
+        dropdown: true,
+        scrollbar: true
+    });
+</script>
